using EduDev_Tracker.Data.Models.Joins;
using SQLite;
using SQLiteNetExtensions.Attributes;

namespace EduDev_Tracker.Data.Models
{

    public enum HabitType { Binary, Quantitative, Time}
    public enum HabitPeriod {Day, Week, Month }

    [Table("habits")]
    public class Habit
    {

        [PrimaryKey, AutoIncrement] public int Id { get; set; }

        [ForeignKey(typeof(Profile)), Indexed]
        public int ProfileId { get; set; }
        [NotNull, MaxLength(200)] public string Title { get; set; } = "";
        public string? Description { get; set; }
        public string? Icon { get; set; }

        [Ignore] public HabitType Type { get; set; } = HabitType.Binary;

        [Column("Type")]
        public string TypeString
        {
            get => Type.ToString();
            set => Type = value switch
            {
                nameof(HabitType.Quantitative) => HabitType.Quantitative,
                nameof(HabitType.Time)         => HabitType.Time,
                _                              => HabitType.Binary,
            };
        }
        public double? TargetValue { get; set; }
        public string? TargetUnit { get; set; }
        [Ignore] public HabitPeriod TargetPeriod { get; set; } = HabitPeriod.Day;

        [Column("TargetPeriod")]
        public string TargetPeriodString
        {
            get => TargetPeriod.ToString();
            set => TargetPeriod = value switch
            {
                nameof(HabitPeriod.Week)  => HabitPeriod.Week,
                nameof(HabitPeriod.Month) => HabitPeriod.Month,
                _                         => HabitPeriod.Day,
            };
        }
        public bool IsArchived { get; set; }
        public bool IsFrozen { get; set; }
        public DateTime FrozenUntil { get; set; }
        public int SortOrder { get; set; }
        public DateTime CreatedAt { get; set; } = DateTime.UtcNow;
        public DateTime UpdatedAt { get; set; } = DateTime.UtcNow;

        [OneToMany(CascadeOperations = CascadeOperation.All)]
        public List<HabitLog> Logs { get; set; } = new();

        [ManyToMany(typeof(HabitTag))]
        public List<Tag> Tags { get; set; } = new();

        [OneToOne(CascadeOperations = CascadeOperation.All)]
        public HabitSchedule Schedules { get; set; } = new();




    }
}
